src/k8s/chat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        name: chat
        image: dcbusinesschat
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 82
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  type: ClusterIP
  ports:
    - port: 82
  selector:
    app: chat
