src/k8s/db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata-pvc
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: properties
        - name: MYSQL_PASSWORD
          value: dbuserpassword
        - name: MYSQL_ROOT_PASSWORD
          value: root
        - name: MYSQL_USER
          value: dbuser
        image: mysql:latest
        name: db
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: dbdata

---

apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: NodePort
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
    nodePort: 30003
  selector:
    app: db
