src/k8s/email.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  labels:
    app: email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        name: email
        image: dcbusinessemail:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 81
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: email
spec:
  type: ClusterIP
  ports:
    - port: 81
  selector:
    app: email
