src/k8s/kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - image: docker.elastic.co/kibana/kibana:7.9.2
        name: kibana
        ports:
        - containerPort: 5601

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: NodePort
  ports:
  - name: "5601"
    port: 5601
    targetPort: 5601
    nodePort: 30005
  selector:
    app: kibana
