src/k8s/webapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        name: webapi
        image: dcbusiness:latest
        ports:
        - containerPort: 80
      restartPolicy: Always
        
---

apiVersion: v1
kind: Service
metadata:
  name: webapi
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: webapi
