src/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: webapi
            port:
              number: 80
      - path: /api/email
        pathType: Prefix
        backend:
          service:
            name: email
            port:
              number: 81
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 82
